lay:mobile: fix anchor aligning on mobile

--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -163,8 +163,8 @@
         right: 5px;
         width: 1em;
         font-weight: $bold-weight;
-        font-size: 17px; //#c08cff
-        font-family: "Font Awesome 6 Free"
+        font-size: 17px;
+        font-family: "Font Awesome 6 Free";
         @include media-query($on-mobile) {
           right: 0;
         }   
